ipad title position solved

--- a/src/App.css
+++ b/src/App.css
@@ -1,45 +1,3 @@
-/* body{
-  margin: 0px;
-  padding: 0px;
-}
-
-.navbar
-{
-  background-color:#353539;
-  height: 44px;
-  width: 100%;
-  top: 0px;
-  display: flex;
-  position: sticky;
-  align-items: center;
-  justify-content: center;
-}
-.navlist{
-  width: 70%;
-  display: flex;
-  justify-content: center;
-  list-style-type: none;
-  align-items: center;
-}
-.list
-{
-  color: #cbcbcb;
-  font-size: 13px;
-  font-weight: 350;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  transition: all 0.2s ease-in-out;
-}
-.list:hover{
-  color: white  ;
-  cursor: pointer;
-}
-
-.boddy{
-  height: 1000px;
-  background-color: aquamarine;
-} */
-
-
 *,
 *::before,
 *::after
@@ -60,6 +18,16 @@ a{
 
 .container
 {
+  max-width: 98rem;
+  margin: 0 auto;
+  padding: 0 2.2rem;
+}
+
+.containerNew
+{
+  position: absolute;
+  top: 20%;
+  right: 14%;
   max-width: 98rem;
   margin: 0 auto;
   padding: 0 2.2rem;
@@ -93,13 +61,13 @@ header{
 .nav-link
 {
   font-size: 1.4rem;
-  color: #fff;
+  color: #cbcbcb;
   padding: 0 1rem;
-  transition: opacity .5s;
+  transition: .3s;
 }
 
 .nav-link:hover{
-  opacity: .7;
+  color: white;
 }
 
 .nav-link-apple
@@ -124,8 +92,9 @@ header{
 }
 
 
-/* iphone-11-pro */
-.iphone-11-pro{
+
+/* ipad */
+.ipad{
   background: url("./images/hero/ipad/ipad_larger.jpg");
   margin-top: 4.4rem;
 }
@@ -154,7 +123,7 @@ header{
 
 .title-price
 {
-  font-size: 1.7rem;
+  font-size: 1.9rem;
   color: #6e6e73;
   margin-top: .68rem;
 }
@@ -162,7 +131,7 @@ header{
 .cta
 {
   text-align: center;
-  margin-top: 1.8rem;
+  margin-top: 1rem;
 }
 
 .cta-link
@@ -174,15 +143,16 @@ header{
 
 .cta-link:nth-child(2)
 {
-  margin-left: 2.6rem;
+  margin-left: 5rem;
 }
 
 .cta-link:hover{
   border-bottom: 2px solid #06c;
 }
 
-/* iphone-11 */
-.iphone-11{
+
+/* iphone-14-pro */
+.iphone-14-pro{
   background: url("./images/hero/iphone-14-pro/iphone14pro_larger.jpg");
 }
 
@@ -191,12 +161,30 @@ header{
 }
 
 .cta-link-darker{
-  color: #06c;
+  color: #2997ff;
 }
 
 .cta-link-darker:hover{
-  border-bottom-color: #0070c9;
+  border-bottom-color: #2997ff;
 }
+
+/* iphone-14 */
+.iphone-14{
+  background: url("./images/hero/iphone-14/iphone14_larger.jpg");
+}
+
+.title-dark{
+  color: white;
+}
+
+.cta-link-darker{
+  color: #2997ff;
+}
+
+.cta-link-darker:hover{
+  border-bottom-color: #2997ff;
+}
+
 
 /* watch */
 .watch{
@@ -214,7 +202,9 @@ header{
 /* move to the bottom of all sections styles to keep consistent style */
 .hero
 {
+  position: relative;
   height: 69.2rem;
+  /* height: 100vh; */
   background-size: auto 73.6rem;
   background-position: center;
   background-repeat: no-repeat;
@@ -222,19 +212,23 @@ header{
   border-bottom: .6rem soild #fff;
 }
 
-.iphone-11-pro{
+.ipad{
   border-top: none;
 }
 /* end */
 
 
 @media screen and (max-width:1068px) {
-  .iphone-11-pro{
+  .ipad{
     background: url("./images/hero/ipad/ipad_medium.jpg");
   }
 
-  .iphone-11{
+  .iphone-14-pro{
     background: url("./images/hero/iphone-14-pro/iphone14pro_medium.jpg");
+  }
+
+  .iphone-14{
+    background: url("./images/hero/iphone-14/iphone14_medium.jpg");
   }
 
   .watch{
@@ -246,6 +240,16 @@ header{
     background-size: auto 69.8rem;
     background-position: bottom center;
     background-repeat: no-repeat;
+  }
+
+  .containerNew
+  {
+    position: absolute;
+    top: 20%;
+    right: 6%;
+    max-width: 98rem;
+    margin: 0 auto;
+    padding: 0 2.2rem;
   }
 
   .title-heading{
@@ -278,7 +282,7 @@ header{
     padding: 0;
   }
 
-  .iphone-11-pro{
+  .ipad{
     margin-top: 4.8rem;
   }
 
@@ -306,6 +310,7 @@ header{
   }
 
   .mobile-menu{
+    overflow: auto;
     position: relative;
     z-index: 1500;
     width: 100%;
@@ -346,7 +351,9 @@ header{
   } 
 
   header.active{
+    overflow: auto;
     height: 100%;
+    width: 100%;
     background-color: #000;
   }
 
@@ -426,17 +433,35 @@ header{
 }
 
 @media screen and (max-width:735px){
-  .iphone-11-pro{
+  .ipad{
     background: url("./images/hero/ipad/ipad_small.jpg");
   }
 
-  .iphone-11{
+  .iphone-14-pro{
     background: url("./images/hero/iphone-14-pro/iphone14pro_small.jpg");
+  }
+
+  .iphone-14{
+    background: url("./images/hero/iphone-14/iphone14_small.jpg");
   }
 
   .watch{
     background: url("./images/hero/watch-8/watch8_small.jpg");
   }
+
+  .containerNew
+{
+  /* position: absolute;
+  top: 20%;
+  right: 14%;
+  max-width: 98rem;
+  margin: 0 auto;
+  padding: 0 2.2rem; */
+  max-width: 98rem;
+  margin: 0 auto;
+  padding: 0 2.2rem;
+  position: static;
+}
 
   .hero{
     height: 50rem;
@@ -467,14 +492,31 @@ header{
   }
 
   .cta{
-    margin-top: .7rem;
+    margin-top: -3.8rem;
   }
 
   .cta-link{
     font-size: 1.9rem;
   }
 
-
-
 }
 
+
+
+.wrapper
+{
+  height: 400px;
+  background-color: #06c;
+  padding: 1rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.one{
+  background-color: aqua;
+  height: 400px;
+  margin: 0.5rem;
+  width: 50%;
+}
