--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@ a{
 {
   position: absolute;
   top: 20%;
-  right: 14%;
+  right: 20%;
   max-width: 98rem;
   margin: 0 auto;
   padding: 0 2.2rem;
@@ -60,7 +60,7 @@ header{
 
 .nav-link
 {
-  font-size: 1.4rem;
+  font-size: 1.3rem;
   color: #cbcbcb;
   padding: 0 1rem;
   transition: .3s;
@@ -199,12 +199,38 @@ header{
 }
 
 
-/* move to the bottom of all sections styles to keep consistent style */
+
+
+/* .wrapper
+{
+  height: 69.2rem;
+  background-color: #06c;
+  padding: 1rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+} */
+
+/* .one{
+  background-color: aqua;
+  height: 69.2rem;
+  margin: 0.5rem;
+  width: 50%;
+  position: relative;
+  height: 69.2rem;
+  background-size: auto 35.6rem;
+  background-position: center;
+  background-repeat: no-repeat;
+  border-top: .6rem soild #fff;
+  border-bottom: .6rem soild #fff;
+} */
+
+
 .hero
 {
   position: relative;
   height: 69.2rem;
-  /* height: 100vh; */
   background-size: auto 73.6rem;
   background-position: center;
   background-repeat: no-repeat;
@@ -503,20 +529,122 @@ header{
 
 
 
-.wrapper
-{
-  height: 400px;
-  background-color: #06c;
-  padding: 1rem;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
+/* FOOTER */
+footer{
+  background-color: #f5f5f7;
+  color: #6e6e73;
+  font-size: 13px;
 }
 
-.one{
-  background-color: aqua;
-  height: 400px;
-  margin: 0.5rem;
-  width: 50%;
+.footer-a{
+  color: #424245;
 }
+
+.footer-top{
+  padding: 17px 0 11px;
+  border-bottom: 1.3px solid #cbc6c6 ;
+}
+
+
+.lists{
+  list-style: none;
+}
+.list{
+  content: justify;
+  line-height: 1.33337;
+  font-weight: 400;
+  font-family: "SF Pro Text","Myriad Set Pro","SF Pro Icons","Apple Legacy Chevron","Helvetica Neue","Helvetica","Arial",sans-serif;
+  margin-top: 10px;
+}
+
+
+.footer-mid{
+  padding: 17px 0 11px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.mid{
+  font-size: 12px;
+  margin-top: 25px;
+}
+.mid:nth-child(1)
+{
+  margin-top: 0px;
+}
+.mid-lists
+{
+  list-style: none;
+}
+.mid-list-head
+{
+  color: #1d1d1f;
+  font-weight: 500;
+}
+.mid-list{
+  padding-top: 8px;
+}
+.mid-list>a{
+  color:#424245;
+}
+
+@media screen and (max-width:735px){
+  .footer-mid{
+      padding: 17px 0 11px;
+      display: flex;
+      flex-direction: column;
+      /* justify-content: space-between; */
+  }
+  .mid-list-head{
+      margin-top: 25px;
+  }
+}
+
+
+
+.footer-bottom{
+  padding: 17px 0 11px;
+  padding-bottom: 30px;
+}
+
+.more{
+  border-bottom: 1.3px solid #cbc6c6 ;
+  display: flex;
+}
+.more-p
+{
+  margin-bottom: 7px;
+  display: flex;
+  flex-direction: row;
+}
+.more-a{
+  color: #06c;
+}
+
+
+.copy-view{
+  margin: 7px 0;
+  display: flex;
+  justify-content: space-between;
+  
+}
+
+
+.privacy-lists
+{
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+}
+.privacy-list{
+  border-right: 1.3px solid #cbc6c6 ;
+  padding-left: 10px;
+  padding-right: 10px;   
+}
+.privacy-list:nth-child(1){
+  padding-left: 0px;
+}
+.privacy-list:nth-child(5){
+  border-right: none;
+}
+
